src/scss/header-v2/_search.scss
@import 'colors';


.next-header-v2 .next-header__primary-tools__search {
	line-height: 24px;
	margin: 0;

	a {
		text-decoration: none !important;
	}
}

.next-header-v2__search-toggle {
	cursor: pointer;
	position: relative;
	display: block;
	height: 45px;
	padding: 8px 0;

	&:before {
		content: "";
		height: 100%;
		background-color: oColorsGetPaletteColor('black');
		width: 1px;
		display: block;
		border-right: 1px solid oColorsGetColorFor(nav-separator, border);
		position: absolute;
		top: 0;
	}

	a:after {
		@include nextIcon(search, oColorsGetPaletteColor('white'), 20);
		content: '';
		margin-top: 5px;
	}

	a {
		margin: 10px;
	}

	a span {
		width: 0;
		overflow: hidden;
	}

	.next-header-v2__search-toggle-text--open {
		display: inline-block;
	}

	.next-header-v2__search-toggle-text--close {
		display: none;
	}

	.next-header-v2__search-checkbox:checked ~ & {
		a:after {
			@include nextIcon(cross, oColorsGetPaletteColor('white'), 20);
			content: '';
			position: relative;
		}

		.next-header-v2__search-toggle-text--open {
			display: none;
		}

		.next-header-v2__search-toggle-text--close {
			display: inline-block;
		}
	}
}

.next-header-v2__search-checkbox {
	display: none;
}

.next-header-v2__search-form {
	@include oColorsFor(nav, background);
	visibility: hidden;
	overflow: hidden;
	position: absolute;
	box-sizing: border-box;
	padding: 0 50px;
	top: 3px;
	bottom: 3px;
	right: -10px;
	width: 0;
	z-index: 1;
	transition: 0.2s width 0.25s ease-out, 0.2s left 0.25s ease-out, 0.2s right 0.25s ease-out;

	.next-header-v2__search-checkbox:checked ~ & {
		visibility: visible;
		right: 46px;
		width: 100%;
	}

	.next-header__search-form__input {
		background-color: transparent;
		width: 100%;
		height: 100%;
		margin-left: 40px;
		padding-top: 2px;
		padding-left: 12px;
		border: 0;
		border-radius: 0;
		font-family: inherit;
		font-size: inherit;
		color: white;

		&:focus,
		&:active {
			@include oColorsFor(nav, background);
			outline: none;
			border: 0;
			box-shadow: inset 0 0 3px 1px oColorsGetColorFor(nav-separator, border);
		}
	}

	.next-header-v2__search-form__button {
		@include oColorsFor(nav, background);
		margin-left: 40px;
		position: absolute;
		display: block;
		padding: 2px 6px;
		left: 0;
		top: 0;
		bottom: 0;
		border: 0;
		cursor: pointer;

		&:before,
		&:after {
			@include oColorsFor(nav-separator, background);
			content: "";
			height: 100%;
			width: 1px;
			display: block;
			border-right: 1px solid oColorsGetColorFor(nav-separator, border);
			position: absolute;
			top: 0;
		}

		&:after {
			right: 0;
		}
	}

	.next-header-v2__search-form__button span {
		@include nextIcon(search, oColorsGetPaletteColor('white'), 20);
		display: block;
		margin: 8px 8px 8px 14px;
		background-position: center;
		color: transparent;
		overflow: hidden;
	}
}

.next-header__search-form__label {
		@include oColorsFor(nav-search-placeholder, text);
		position: absolute;
		bottom: -8px;
		left: 110px;
		opacity: 0.8;
		height: 100%;
		overflow: hidden;
		font-size: 70%;

		@include oGridRespondTo(S) {
			font-size: 100%;
		}
}

.next-header-v2 {
	.typeahead {
		list-style: none;
		position: absolute;
		left: 0;
		right: 0;
		top: 43px;
		border: 0;
		background-color: #fcfcfc;
		color: oColorsGetPaletteColor('grey-tint5');
		z-index: 11;
		text-align: left;
		margin: 0px;
		padding: 0;
		display: none;
	}

	.typeahead--active {
		display: block;
	}

	.typeahead__item {
		padding: 7px 5px 7px 60px;
	}

	.typeahead__link {
		color: oColorsGetPaletteColor('grey-tint5');
		display: inline-block;
		width: 100%;
		text-decoration: none;

		&:hover,
		&:focus {
			color: oColorsGetPaletteColor('blue');
			text-decoration-style: dotted;
		}
	}

	.typeahead__view-all button {
		@include oColorsFor(nav, background);
		@include oColorsFor(nav, text);
		width: 100%;
		height: 100%;
		font-family: inherit;
		font-size: inherit;
		padding: 0.5em 0;
		cursor: pointer;
		border: 0;

		&:after {
			@include nextIcon(arrow-right, oColorsGetColorFor(nav, text), 14);
			content: '';
			padding-left: 0.5em;
			margin-bottom: -0.1em;
		}

		&:focus,
		&:active {
			outline: none;
		}
	}
}

